crates/tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_tx_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Not a `tx` field
  ┌─ fixtures/compile_errors/invalid_tx_field.fe:4:8
  │
4 │     tx.foo
  │        ^^^
  │
  = Note: Only `gas_price` and `origin` can be accessed on `tx`.


